Usage of bind_address attribute in template file

--- a/templates/default/librenms-mysqld.cnf.erb
+++ b/templates/default/librenms-mysqld.cnf.erb
@@ -2,5 +2,5 @@
 innodb_file_per_table=1
 sql-mode=""
 lower_case_table_names=0
-bind-address = 127.0.0.1
+bind-address = <%= @bind_address %>
 innodb_flush_log_at_trx_commit = 0
