Allow the option of adding a specific config file included in the main one
 - As the main config.php is templated, options not handled by any attributes
   can be added in a second file.

--- a/templates/default/config.php.erb
+++ b/templates/default/config.php.erb
@@ -47,3 +47,9 @@ $config['rrdtool_version'] = '1.5.5';
 
 $config['geoloc']['latlng'] = true;
 $config['geoloc']['engine'] = "google"; //Only one available at present
+
+<% if @add_conf_enabled == true %>
+  if(file_exists( __DIR__ . '<%= @add_conf_file_path %>')) {
+    include "<%= @add_conf_file_path %>"
+}
+<% end $>
