--- a/templates/default/rrdcached.erb
+++ b/templates/default/rrdcached.erb
@@ -8,7 +8,7 @@ RRDC_USER=<%= @user %>
 #
 # To pass additional options, set OPTIONS here
 #
-OPTIONS="<%= @options %> -s <%= @user %> -U <%= @user %> -G <%= @group %>"
+OPTIONS="<%= @options %> -s <%= @user %> -U <%= @user %> -G <%= @group %> -b <%= dir %>"
 
 #
 # Socket permissions
