--- a/templates/default/config.php.erb
+++ b/templates/default/config.php.erb
@@ -19,7 +19,8 @@ $config['memcached']['host']    = "localhost";
 $config['memcached']['port']    = 11211;
 
 ### Locations - it is recommended to keep the default
-$config['install_dir']  = "<%= @path %>";
+$config['install_dir']    = "<%= @path %>";
+$config['rrd_dir']        = "<%= @rrddir %>";
 
 ### This should *only* be set if you want to *force* a particular hostname/port
 ### It will prevent the web interface being usable form any other hostname
