Fix the template file to be a valid erb file
Change-Id: I75cef3316e5a58771a09286c267fcdba1c899cc8

--- a/templates/default/config.php.erb
+++ b/templates/default/config.php.erb
@@ -69,4 +69,4 @@ $config['geoloc']['engine'] = "google"; //Only one available at present
 if(file_exists( __DIR__ . DIRECTORY_SEPARATOR .  '<%= @add_conf_file_path %>')) {
     include __DIR__ . DIRECTORY_SEPARATOR .  '<%= @add_conf_file_path %>';
 }
-<% end $>
+<% end %>
