--- a/templates/default/web_app.conf.erb
+++ b/templates/default/web_app.conf.erb
@@ -8,6 +8,7 @@
   <Directory <%= @params[:docroot] %>>
     Options <%= [@params[:directory_options] || "FollowSymLinks" ].flatten.join " " %>
     AllowOverride <%= [@params[:allow_override] || "None" ].flatten.join " " %>
+    AddType application/x-httpd-php .php
     Require all granted
   </Directory>
 
