--- a/templates/default/create_db.sql.erb
+++ b/templates/default/create_db.sql.erb
@@ -1,5 +1,5 @@
-CREATE DATABASE librenms CHARACTER SET utf8 COLLATE utf8_unicode_ci;
-CREATE USER 'librenms'@'localhost' IDENTIFIED BY '<%= @password %>';
-GRANT ALL PRIVILEGES ON librenms.* TO 'librenms'@'localhost';
+CREATE DATABASE <%= @dbname %> CHARACTER SET utf8 COLLATE utf8_unicode_ci;
+CREATE USER '<%= @username %>'@'localhost' IDENTIFIED BY '<%= @password %>';
+GRANT ALL PRIVILEGES ON <%= @dbname %>.* TO '<%= @username %>'@'localhost';
 FLUSH PRIVILEGES;
 exit
