Add MySQL attributes
Allows to configure the MySQL wait_timeout and
max_connect_errors variables

--- a/templates/default/librenms-mysqld.cnf.erb
+++ b/templates/default/librenms-mysqld.cnf.erb
@@ -5,3 +5,5 @@ lower_case_table_names=0
 bind-address = <%= @bind_address %>
 innodb_flush_log_at_trx_commit = 0
 max_connections=<%= @max_connections %>
+max_connect_errors=<%= @max_connect_errors %>
+wait_timeout=<%= @wait_timeout %>
