allow to set the folder to store the db

--- a/templates/default/librenms-mysqld.cnf.erb
+++ b/templates/default/librenms-mysqld.cnf.erb
@@ -7,3 +7,4 @@ innodb_flush_log_at_trx_commit = 0
 max_connections=<%= @max_connections %>
 max_connect_errors=<%= @max_connect_errors %>
 wait_timeout=<%= @wait_timeout %>
+datadir=<%= @datadir %>
